--- a/data/meta.yml
+++ b/data/meta.yml
@@ -1,8 +1,8 @@
 # Metas
-title: "Middleman Starter"
-description: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+title: "Bastien Robert"
+description: "Je suis Bastien Robert, développeur web de 19 ans, étudiant à l'IUT Bordeaux Montaigne."
 image: ""
-twitter: "@twitter"
+twitter: "@bastienrbt"
 
 # Google Site Verification key
 google: "TUrynCtOEjV720c4jtUdaoIu1xra7vZpZLNZMXXvYN8"
