--- a/data/projects.yml
+++ b/data/projects.yml
@@ -46,6 +46,28 @@
     work: Front and back-end development, project management
     main:
       production: events countdown
+- name: Texposoù?
+  slug: texposou
+  color: "#232adc"
+  url: https://texposou.cf
+  main: cover.jpg
+  customer: IUT Formation MMI
+  mockups:
+    iphone:
+      - iphone-1.png
+      - iphone-2.png
+  technologies:
+    - Rails
+  fr:
+    description: Texposoù est un projet réalisé dans le cadre d’un workshop, j’ai participé au développement d’une plateforme visant à mettre en relation des artistes émergents et les lieux d’expositions, particuliers ou professionnels, voulant réaliser des vernissages ou des expositions chez eux.
+    work: Développement front & back-end
+    main:
+      production: plannification de permaculture
+  en:
+    description: Texposoù is a project realized during a workshop, I took part in the development of a platform where the goal is to put in relation the emerging artists and the places of exhibitions, private individuals or professionals, wanting to realize vernissages or exposures at them.
+    work: Front and back-end development
+    main:
+      production: permaculture plannification
 - name: Capsule
   slug: capsule
   color: "#7da8f6"
@@ -70,29 +92,6 @@
     work: Front and back-end development
     main:
       production: ephemeral eshop
-- name: Tableau de Bord
-  slug: tableau-de-bord
-  color: "#82c58d"
-  url: https://fermedavenir2k17.herokuapp.com
-  main: cover.jpg
-  customer: IUT Formation MMI
-  mockups:
-    iphone:
-      - iphone-1.png
-      - iphone-2.png
-  technologies:
-    - ThreeJS
-    - VueJS
-  fr:
-    description: « Tableau de Bord » est un outil développé en collaboration avec l’association Fermes d’Avenir. Il vise à faciliter les procédés de création de permaculture. Cet outil permet de guider le permaculteur tout au long du processus de croissance de ses plantes grâce a un planning détaillé de semis, de plantation et de récolte.
-    work: Développement front & back-end
-    main:
-      production: plannification de permaculture
-  en:
-    description: « Tableau de Bord » is a tool developed in collaboration with the association Fermes d'Avenir. It aims to facilitate processes for creating permaculture. This tool guides the permaculturist throughout the growth process of his plants through a detailed planning of seeding, planting and harvesting.
-    work: Front and back-end development
-    main:
-      production: permaculture plannification
 - name: Sounds In Bordeaux
   slug: sounds-in-bordeaux
   color: "#304FFE"
