Add links to copy email

--- a/data/pages.yml
+++ b/data/pages.yml
@@ -3,3 +3,5 @@ socials:
   'Codepen': https://codepen.io/bastienrbt
   'Medium': https://medium.com/@bastienrbt
   'LinkedIn': https://www.linkedin.com/in/bastienrobert/
+about:
+  mail: bastienrobert@outlook.com
