--- a/data/pages.yml
+++ b/data/pages.yml
@@ -1,6 +1,6 @@
 socials:
   'Github': https://github.com/bastienrobert
-  'Codepen': https://codepen.io/bastienrbt
+  'Codepen': https://codepen.io/bastienrobert
   'Medium': https://medium.com/@bastienrbt
   'LinkedIn': https://www.linkedin.com/in/bastienrobert/
 about:
