Texposou onepage and fix CSS bug on media phone

--- a/data/projects.yml
+++ b/data/projects.yml
@@ -52,6 +52,7 @@
   color: "#232adc"
   url: https://texposou.cf
   main: cover.jpg
+  onepage: true
   medium: https://medium.com/@bastienrbt/texposo%C3%B9-%C3%A9tude-de-cas-84f1cfc7d663
   customer: IUT Formation MMI
   mockups:
