Set a meta image

--- a/data/meta.yml
+++ b/data/meta.yml
@@ -1,7 +1,7 @@
 # Metas
 title: "Bastien Robert"
 description: "Je suis Bastien Robert, développeur web de 19 ans, étudiant à l'IUT Bordeaux Montaigne."
-image: ""
+image: "/images/meta.png"
 twitter: "@bastienrbt"
 
 # Google Site Verification key
