Add description to homepage and about page

--- a/data/meta.yml
+++ b/data/meta.yml
@@ -3,6 +3,7 @@ title: "Bastien Robert"
 description: "Je suis Bastien Robert, développeur web de 19 ans, étudiant à l'IUT Bordeaux Montaigne."
 image: "/images/meta.png"
 twitter: "@bastienrbt"
+facebook_id: 626470267541137
 
 # Google Site Verification key
 google: "TUrynCtOEjV720c4jtUdaoIu1xra7vZpZLNZMXXvYN8"
