Fix redactionnal mistakes

--- a/data/projects.yml
+++ b/data/projects.yml
@@ -69,7 +69,7 @@
     description: Texposoù est un projet réalisé dans le cadre d’un workshop, j’ai participé au développement d’une plateforme visant à mettre en relation des artistes émergents et les lieux d’expositions, particuliers ou professionnels, voulant réaliser des vernissages ou des expositions chez eux.
     work: Développement front & back-end
     main:
-      production: plannification de permaculture
+      production: expositions pour artistes indépendants
   en:
     description: Texposoù is a project realized during a workshop, I took part in the development of a platform where the goal is to put in relation the emerging artists and the places of exhibitions, private individuals or professionals, wanting to realize vernissages or exposures at them.
     work: Front and back-end development
