Replace meta image by picture of myself

--- a/data/meta.yml
+++ b/data/meta.yml
@@ -1,7 +1,7 @@
 # Metas
 title: "Bastien Robert"
 description: "Je suis Bastien Robert, développeur web de 19 ans, étudiant à l'IUT Bordeaux Montaigne."
-image: "/images/meta.png"
+image: "/images/me.png"
 twitter: "@bastienrbt"
 facebook_id: 626470267541137
 
